Do not emit UNITS property
This is not a real property and it has bad effects of overriding
toString() from superclass -- which should never happen, really.

Define a proper Naming constant to capture the constant name, which we
also change to UNITS to keep things simpler.

JIRA: YANGTOOLS-1794
Change-Id: I5e32df2cc01a1b11dbaa7761acc1745dab3407b2
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>